--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     
     <title>Memories- Image Gallery</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="lightbox.min.css">
-    <script src="lightbox-plus-jquery.min.js"></script>
+    <link rel="stylesheet" href="lightbox.css">
+    <script src="lightboxx.js"></script>
     <!-- Icon 32px -->
     <link rel="icon" type="image/png" href="icon32.png">
 
